--- a/src/pages/Home/Statistics/styles.scss
+++ b/src/pages/Home/Statistics/styles.scss
@@ -10,7 +10,7 @@
   gap: 24px;
   margin-top: 24px;
   margin-bottom: 24px;
-  min-height: 256px;
+  min-height: 330px;
 
   &-title {
     color: var(--color-primary-50);
